add base model in target

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -94,6 +94,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.40534838  0.39714912  0.49981746  0.23274788]\n",
+      " [ 0.65727202  0.61677473  0.64460056  0.18923789]\n",
+      " [ 0.47064772  0.45624422  0.81291262  0.20101051]]\n",
+      "2.66652027186\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = load_csv('season2.csv')\n",
+    "\n",
+    "X = np.array(data[1:100])\n",
+    "kmeans = KMeans(n_clusters=cluster_num, init=kmeans.cluster_centers_)\n",
+    "kmeans.fit(X)\n",
+    "\n",
+    "centroids = kmeans.cluster_centers_\n",
+    "labels = kmeans.labels_\n",
+    "    \n",
+    "print(kmeans.cluster_centers_)\n",
+    "print(kmeans.inertia_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
