--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,21 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.22309403  0.22124276  0.494288    0.22564246]\n",
-      " [ 0.31731571  0.32117916  0.75579611  0.17903213]\n",
-      " [ 0.40147874  0.3956713   0.49023674  0.24610212]]\n",
+      "[[ 0.31731571  0.32117916  0.75579611  0.17903213]\n",
+      " [ 0.40147874  0.3956713   0.49023674  0.24610212]\n",
+      " [ 0.22309403  0.22124276  0.494288    0.22564246]]\n",
       "4.41116355823\n"
      ]
     }
    ],
    "source": [
+    "#learn centers from source/base model\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
@@ -75,29 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "elements = [10,20,30,40,50]"
+    "#no of elements and load target data\n",
+    "elements = [10,20,30,40,50]\n",
+    "target_data = load_csv('season2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.38536744831\n",
-      "5.84911458257\n",
-      "5.62569202857\n",
-      "4.9141645374\n",
-      "5.00657104231\n"
+      "5.94758665577\n"
      ]
     },
     {
@@ -110,13 +109,46 @@
     }
    ],
    "source": [
-    "target_data = load_csv('season2.csv')\n",
+    "#base model results\n",
+    "X = np.array(target_data[1:])\n",
+    "kmeans = KMeans(n_clusters=cluster_num, init=base_centroids, max_iter=1)\n",
+    "kmeans.fit(X)\n",
+    "print(kmeans.inertia_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.38536744831\n",
+      "5.84911458257\n",
+      "5.16298416317\n",
+      "4.82748331856\n",
+      "4.7602860273\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "  return_n_iter=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#retraining results\n",
     "retrained_centroids= []\n",
     "\n",
     "for n in elements:\n",
     "\n",
     "    X = np.array(target_data[1:n+1])\n",
-    "    kmeans = KMeans(n_clusters=cluster_num, init=base_centroids)\n",
+    "    kmeans = KMeans(n_clusters=cluster_num)\n",
     "    kmeans.fit(X)\n",
     "\n",
     "    retrained_centroids.append(kmeans.cluster_centers_)\n",
