--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,17 +40,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "base_data = load_csv('season1.csv')    \n",
+    "base_data = np.array(base_data[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.31731571  0.32117916  0.75579611  0.17903213]\n",
-      " [ 0.40147874  0.3956713   0.49023674  0.24610212]\n",
-      " [ 0.22309403  0.22124276  0.494288    0.22564246]]\n",
-      "4.41116355823\n"
+      "Number of Clusters:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#learn number of clusters using silhouette_score\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "from sklearn.datasets import make_blobs\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_samples, silhouette_score\n",
+    "\n",
+    "num_clusters = 0\n",
+    "max_silhouette = -1\n",
+    "\n",
+    "for n_clusters in range(2,10):\n",
+    "\n",
+    "    # Initialize the clusterer with n_clusters value and a random generator\n",
+    "    # seed of 10 for reproducibility.\n",
+    "    clusterer = KMeans(n_clusters=n_clusters)\n",
+    "    cluster_labels = clusterer.fit_predict(base_data)\n",
+    "\n",
+    "    silhouette_avg = silhouette_score(base_data, cluster_labels)\n",
+    "    #print(\"For n_clusters =\", n_clusters,\"The average silhouette_score is :\", silhouette_avg)\n",
+    "    \n",
+    "    if(silhouette_avg > max_silhouette):\n",
+    "        max_silhouette = silhouette_avg\n",
+    "        num_clusters = n_clusters\n",
+    "\n",
+    "print(\"Number of Clusters: \",num_clusters)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.87452641436\n"
      ]
     }
    ],
@@ -59,24 +109,19 @@
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "base_data = load_csv('season1.csv')    \n",
-    "X = np.array(base_data[1:])\n",
-    "\n",
-    "cluster_num = 3\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=cluster_num)\n",
-    "kmeans.fit(X)\n",
+    "kmeans = KMeans(n_clusters=num_clusters)\n",
+    "kmeans.fit(base_data)\n",
     "\n",
     "base_centroids = kmeans.cluster_centers_\n",
     "#labels = kmeans.labels_\n",
     "    \n",
-    "print(kmeans.cluster_centers_)\n",
+    "#print(kmeans.cluster_centers_)\n",
     "print(kmeans.inertia_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -89,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.94758665577\n"
+      "6.88333196231\n"
      ]
     },
     {
@@ -110,26 +155,25 @@
    ],
    "source": [
     "#base model results\n",
-    "X = np.array(target_data[1:])\n",
-    "kmeans = KMeans(n_clusters=cluster_num, init=base_centroids, max_iter=1)\n",
-    "kmeans.fit(X)\n",
+    "kmeans = KMeans(n_clusters=num_clusters, init=base_centroids, max_iter=1)\n",
+    "kmeans.fit(target_data[1:])\n",
     "print(kmeans.inertia_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.38536744831\n",
-      "5.84911458257\n",
-      "5.16298416317\n",
-      "4.82748331856\n",
-      "4.7602860273\n"
+      "6.89377210019\n",
+      "6.72197078224\n",
+      "6.65951589037\n",
+      "6.5807709417\n",
+      "6.58887790128\n"
      ]
     },
     {
@@ -143,27 +187,18 @@
    ],
    "source": [
     "#retraining results\n",
-    "retrained_centroids= []\n",
+    "#retrained_centroids= []\n",
     "\n",
     "for n in elements:\n",
     "\n",
-    "    X = np.array(target_data[1:n+1])\n",
-    "    kmeans = KMeans(n_clusters=cluster_num)\n",
-    "    kmeans.fit(X)\n",
+    "    #Read Available Limited Target Data\n",
+    "    kmeans = KMeans(n_clusters=num_clusters)\n",
+    "    kmeans.fit(target_data[1:n+1])\n",
+    "    \n",
+    "    #Result on whole Target Data\n",
+    "    kmeans = KMeans(n_clusters=num_clusters, init=kmeans.cluster_centers_, max_iter=1)\n",
+    "    kmeans.fit(target_data[1:])\n",
     "\n",
-    "    retrained_centroids.append(kmeans.cluster_centers_)\n",
-    "    #labels = kmeans.labels_\n",
-    "\n",
-    "    #print(kmeans.cluster_centers_)\n",
-    "    #print(kmeans.inertia_)\n",
-    "    X = np.array(target_data[1:])\n",
-    "    kmeans = KMeans(n_clusters=cluster_num, init=kmeans.cluster_centers_, max_iter=1)\n",
-    "    kmeans.fit(X)\n",
-    "\n",
-    "    #target_centroids = kmeans.cluster_centers_\n",
-    "    #labels = kmeans.labels_\n",
-    "\n",
-    "    #print(kmeans.cluster_centers_)\n",
     "    print(kmeans.inertia_)"
    ]
   },
