added test file to test gradient descent

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,18 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "base_data = load_csv('season1.csv')    \n",
-    "base_data = np.array(base_data[1:])"
+    "base_data = np.array(base_data[1:])\n",
+    "num_features = len(base_data[1])\n",
+    "#print(num_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,9 +173,9 @@
      "text": [
       "6.89377210019\n",
       "6.72197078224\n",
-      "6.65951589037\n",
-      "6.5807709417\n",
-      "6.58887790128\n"
+      "6.71856591832\n",
+      "6.56801645576\n",
+      "6.56840787928\n"
      ]
     },
     {
@@ -200,6 +202,17 @@
     "    kmeans.fit(target_data[1:])\n",
     "\n",
     "    print(kmeans.inertia_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#reframing"
    ]
   },
   {
