--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\utils\\validation.py:475: DataConversionWarning: Data with input dtype int32 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, DataConversionWarning)\n"
+      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, _DataConversionWarning)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "import numpy as np\n",
     "\n",
     "base = np.array([[20],[30],[50],[120],[22],[63],[102],[34],[87],[12],[25],[128],[23],[77],[56]])\n",
     "target = np.array([[50],[70],[110],[250],[54],[136],[214],[78],[184],[34],[60],[266],[56],[166],[122]])\n",
@@ -27,31 +28,31 @@
     "target_unscaled = scaler.inverse_transform(target_scaled)\n",
     "\n",
     "num_clusters = 3\n",
-    "#print(target_unscaled)"
+    "#print(target_scaled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.47068966]\n",
-      " [0.10098522]\n",
-      " [0.90229885]]\n",
-      "0.1175159956967329\n"
+      "[[ 0.47068966]\n",
+      " [ 0.10098522]\n",
+      " [ 0.90229885]]\n",
+      "0.117515995697\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
     "kmeans = KMeans(n_clusters=3)\n",
-    "kmeans.fit(scaled)\n",
+    "kmeans.fit(base_scaled)\n",
     "\n",
     "base_centroids = kmeans.cluster_centers_\n",
     "#labels = kmeans.labels_\n",
@@ -62,11 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def cal_parameters(alpha,beta):\n",
+    "def cal_centroids(alpha,beta):\n",
     "\n",
     "    target_centroids = []\n",
     "    for i in range(len(base_centroids)):\n",
@@ -80,15 +83,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-22-96e2af2db05b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-96e2af2db05b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def cal_gradient():\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cal_gradient():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4739737274220033 1.4200000000000002\n",
-      "1.7300161119976563\n"
+      "1.47397372742 1.42\n",
+      "0.578029298724\n"
      ]
     }
    ],
@@ -106,7 +127,7 @@
     "print(sum_m,sum_d)\n",
     "avg_d = sum_d/len(target_scaled)\n",
     "\n",
-    "alpha = avg_m/avg_d\n",
+    "alpha = avg_d/avg_m\n",
     "beta = 0\n",
     "print(alpha)\n",
     "        \n"
@@ -114,69 +135,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.005600000000000004 0.005600000000000004\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\cluster\\k_means_.py:896: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
       "  return_n_iter=True)\n"
      ]
     }
    ],
    "source": [
-    "kmeans = KMeans(n_clusters=num_clusters, init=cal_parameters(alpha,beta))\n",
+    "kmeans = KMeans(n_clusters=num_clusters, init=cal_centroids(alpha,beta), max_iter=1)\n",
     "kmeans.fit(target_scaled)\n",
     "old_error = kmeans.inertia_\n",
     "\n",
-    "while(1):\n",
+    "# while(1):\n",
     "    \n",
-    "    alpha = alpha + .001\n",
-    "    kmeans = KMeans(n_clusters=num_clusters, init=cal_parameters(alpha,beta))\n",
-    "    kmeans.fit(target_scaled)\n",
-    "    new_error = kmeans.inertia_\n",
-    "    print(old_error,new_error)\n",
-    "    if(new_error < old_error):\n",
-    "        old_error = new_error\n",
+    "#     alpha = alpha - 0.01*\n",
+    "#     beta = beta + 1\n",
+    "#     kmeans = KMeans(n_clusters=num_clusters, init=cal_parameters(alpha,beta), max_iter=1)\n",
+    "#     kmeans.fit(target_unscaled)\n",
+    "#     new_error = kmeans.inertia_\n",
+    "#     print(old_error,new_error)\n",
+    "#     if(new_error < old_error):\n",
+    "#         old_error = new_error\n",
     "                \n",
-    "    else:\n",
-    "        break;\n",
+    "#     else:\n",
+    "#         break;\n",
     "    \n",
     "    \n",
     "\n",
-    "    #base_centroids = kmeans.cluster_centers_\n",
-    "    #labels = kmeans.labels_\n",
+    "#     #base_centroids = kmeans.cluster_centers_\n",
+    "#     #labels = kmeans.labels_\n",
     "\n",
-    "    #print(kmeans.cluster_centers_)\n",
-    "    print(old_error,new_error)"
+    "#     #print(kmeans.cluster_centers_)\n",
+    "#     print(old_error,new_error)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[250.]\n",
-      "[array([250.])]\n",
+      "[ 0.3]\n",
+      "[array([ 0.3])]\n",
       "******\n",
-      "[71.]\n",
-      "[array([50.]), array([70.]), array([110.]), array([54.])]\n",
+      "[ 0.04]\n",
+      "[array([ 0.]), array([ 0.1]), array([ 0.02])]\n",
       "******\n",
-      "[250.]\n",
-      "[]\n",
+      "[ 1.]\n",
+      "[array([ 1.])]\n",
       "******\n"
      ]
     }
@@ -194,13 +209,13 @@
     "    clusters.append([])\n",
     "    \n",
     "#print(kmeans.cluster_centers_)\n",
-    "for i in range(len(target_unscaled)):\n",
+    "for i in range(len(target_scaled)):\n",
     "    #print(\"coordinate:\",X[i], \"label:\", labels[i], \"keyword:\", keywords[i])\n",
-    "    clusters[labels[i]].append(target_unscaled[i])\n",
+    "    clusters[labels[i]].append(target_scaled[i])\n",
     "\n",
-    "unscaled_centroids = scaler.inverse_transform(centroids)\n",
+    "#unscaled_centroids = scaler.inverse_transform(centroids)\n",
     "for i in range(0,3):\n",
-    "    print(unscaled_centroids[i])\n",
+    "    print(centroids[i])\n",
     "    print(clusters[i])\n",
     "    print(\"******\")"
    ]
@@ -208,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -229,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
