finding gradient-testcode

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,16 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.47068966]\n",
+      "[[ 0.90229885]\n",
       " [ 0.10098522]\n",
-      " [ 0.90229885]]\n",
+      " [ 0.47068966]]\n",
       "0.117515995697\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -77,6 +77,7 @@
     "        target_centroids.append([val])\n",
     "\n",
     "    target_centroids = np.array(target_centroids)\n",
+    "    print(target_centroids)\n",
     "    return target_centroids\n",
     "    #print(target_centroids)"
    ]
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -135,9 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.52155517]\n",
+      " [ 0.05837242]\n",
+      " [ 0.27207241]]\n",
+      "0.0056\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -148,9 +159,11 @@
     }
    ],
    "source": [
-    "kmeans = KMeans(n_clusters=num_clusters, init=cal_centroids(alpha,beta), max_iter=1)\n",
+    "reframed_centroids =  cal_centroids(alpha,beta)\n",
+    "kmeans = KMeans(n_clusters=num_clusters, init=reframed_centroids, max_iter=1)\n",
     "kmeans.fit(target_scaled)\n",
     "old_error = kmeans.inertia_\n",
+    "print(old_error)\n",
     "\n",
     "# while(1):\n",
     "    \n",
@@ -177,21 +190,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.3]\n",
-      "[array([ 0.3])]\n",
-      "******\n",
-      "[ 0.04]\n",
-      "[array([ 0.]), array([ 0.1]), array([ 0.02])]\n",
-      "******\n",
+      "0.521555171838\n",
       "[ 1.]\n",
+      "1.0\n",
       "[array([ 1.])]\n",
+      "-0.249535374567\n",
+      "-0.478444828162\n",
+      "******\n",
+      "0.0583724168663\n",
+      "[ 0.04]\n",
+      "0.0\n",
+      "0.1\n",
+      "0.02\n",
+      "[array([ 0.]), array([ 0.1]), array([ 0.02])]\n",
+      "-0.247295483854\n",
+      "-0.440072411296\n",
+      "******\n",
+      "0.272072411296\n",
+      "[ 0.3]\n",
+      "0.3\n",
+      "[array([ 0.3])]\n",
+      "-0.254893810254\n",
+      "-0.468\n",
       "******\n"
      ]
     }
@@ -214,10 +241,73 @@
     "    clusters[labels[i]].append(target_scaled[i])\n",
     "\n",
     "#unscaled_centroids = scaler.inverse_transform(centroids)\n",
+    "gradient_alpha = 0\n",
+    "gradient_beta = 0\n",
     "for i in range(0,3):\n",
+    "    gradient = 0\n",
+    "    print(reframed_centroids[i][0])\n",
     "    print(centroids[i])\n",
+    "    for member in clusters[i]:\n",
+    "        print(member[0])\n",
+    "        gradient = reframed_centroids[i][0] - member[0]\n",
+    "    \n",
+    "    gradient_alpha = gradient_alpha + gradient*reframed_centroids[i][0]\n",
+    "    gradient_beta = gradient_beta + gradient\n",
     "    print(clusters[i])\n",
+    "    print(gradient_alpha)\n",
+    "    print(gradient_beta)\n",
     "    print(\"******\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.832923108978 0.468\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = alpha-1*gradient_alpha\n",
+    "beta = beta-1*gradient_beta\n",
+    "print(alpha,beta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.21954556]\n",
+      " [ 0.55211292]\n",
+      " [ 0.86004829]]\n",
+      "0.03845\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "  return_n_iter=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reframed_centroids =  cal_centroids(alpha,beta)\n",
+    "kmeans = KMeans(n_clusters=num_clusters, init=reframed_centroids, max_iter=1)\n",
+    "kmeans.fit(target_scaled)\n",
+    "old_error = kmeans.inertia_\n",
+    "print(old_error)"
    ]
   },
   {
