learning alpha, beta in test file

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,27 +82,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cal_gradient():\n",
+    "def cal_gradient(clusters,reframed_centroids,old_alpha,old_beta):\n",
     "    gradient_alpha = 0\n",
     "    gradient_beta = 0\n",
-    "    for i in range(0,3):\n",
+    "    for i in range(0,num_clusters):\n",
     "        gradient = 0\n",
-    "        print(reframed_centroids[i][0])\n",
-    "        print(centroids[i])\n",
+    "        #print(reframed_centroids[i][0])\n",
+    "        #print(centroids[i])\n",
     "        for member in clusters[i]:\n",
-    "            print(member[0])\n",
+    "            #print(member[0])\n",
     "            gradient = reframed_centroids[i][0] - member[0]\n",
     "\n",
     "        gradient_alpha = gradient_alpha + gradient*reframed_centroids[i][0]\n",
     "        gradient_beta = gradient_beta + gradient\n",
-    "        print(clusters[i])\n",
-    "        print(gradient_alpha)\n",
-    "        print(gradient_beta)\n",
-    "        print(\"******\")"
+    "        #print(clusters[i])\n",
+    "        #print(gradient_alpha)\n",
+    "        #print(gradient_beta)\n",
+    "        #print(\"******\")\n",
+    "        \n",
+    "    new_alpha = old_alpha-1*gradient_alpha\n",
+    "    new_beta = old_beta-1*gradient_beta\n",
+    "    return [new_alpha,new_beta]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_members(centroids,labels):\n",
+    "    #centroids = kmeans.cluster_centers_\n",
+    "    #labels = kmeans.labels_\n",
+    "\n",
+    "    #c = Counter(labels)\n",
+    "\n",
+    "    clusters = []\n",
+    "    for i in range(0,3):\n",
+    "        clusters.append([])\n",
+    "\n",
+    "    #print(kmeans.cluster_centers_)\n",
+    "    for i in range(len(target_scaled)):\n",
+    "        #print(\"coordinate:\",X[i], \"label:\", labels[i], \"keyword:\", keywords[i])\n",
+    "        clusters[labels[i]].append(target_scaled[i])"
    ]
   },
   {
@@ -168,29 +194,31 @@
     "kmeans = KMeans(n_clusters=num_clusters, init=reframed_centroids, max_iter=1)\n",
     "kmeans.fit(target_scaled)\n",
     "old_error = kmeans.inertia_\n",
+    "centroids = kmeans.cluster_centers_\n",
+    "labels = kmeans.labels_\n",
     "print(old_error)\n",
     "\n",
-    "# while(1):\n",
+    "while(1):\n",
     "    \n",
-    "#     alpha = alpha - 0.01*\n",
-    "#     beta = beta + 1\n",
-    "#     kmeans = KMeans(n_clusters=num_clusters, init=cal_parameters(alpha,beta), max_iter=1)\n",
-    "#     kmeans.fit(target_unscaled)\n",
-    "#     new_error = kmeans.inertia_\n",
-    "#     print(old_error,new_error)\n",
-    "#     if(new_error < old_error):\n",
-    "#         old_error = new_error\n",
+    "    clusters = find_members(centroids,labels)\n",
+    "    \n",
+    "    new_alphabeta = cal_gradient(clusters,reframed_centroids,alpha,beta)\n",
+    "    reframed_centroids =  cal_centroids(new_alphabeta[0],new_alphabeta[1])\n",
+    "    kmeans = KMeans(n_clusters=num_clusters, init=reframed_centroids, max_iter=1)\n",
+    "    kmeans.fit(target_scaled)\n",
+    "    new_error = kmeans.inertia_\n",
+    "    print(old_error,new_error)\n",
+    "    if(new_error < old_error):\n",
+    "        old_error = new_error\n",
     "                \n",
-    "#     else:\n",
-    "#         break;\n",
-    "    \n",
-    "    \n",
+    "    else:\n",
+    "        break; \n",
     "\n",
-    "#     #base_centroids = kmeans.cluster_centers_\n",
-    "#     #labels = kmeans.labels_\n",
+    "    #base_centroids = kmeans.cluster_centers_\n",
+    "    #labels = kmeans.labels_\n",
     "\n",
-    "#     #print(kmeans.cluster_centers_)\n",
-    "#     print(old_error,new_error)"
+    "    #print(kmeans.cluster_centers_)\n",
+    "    print(old_error,new_error)"
    ]
   },
   {
