--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -41,8 +41,8 @@
      "output_type": "stream",
      "text": [
       "[[ 0.10098522]\n",
-      " [ 0.90229885]\n",
-      " [ 0.47068966]]\n",
+      " [ 0.47068966]\n",
+      " [ 0.90229885]]\n",
       "0.117515995697\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# def closest_centroids(old_centroids,new_centroids):\n",
@@ -116,8 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def closest_centroids(old_centroids,new_centroids):\n",
@@ -130,12 +134,12 @@
     "        min_idx = -1\n",
     "        min_value = 2\n",
     "        for j in range(num_clusters):\n",
-    "            diff = abs(old_centroids[i][0] - new_centroids[j][0])\n",
+    "            diff = abs(new_centroids[i][0] - old_centroids[j][0])\n",
     "            if(diff < min_value):\n",
     "                idx = j\n",
     "                min_value = diff\n",
     "        \n",
-    "        print(old_centroids[i][0],\"closest: \", new_centroids[idx][0])\n",
+    "        print(old_centroids[i][0],\"closest: \", new_centroids[idx][0], \"position: \", idx)\n",
     "        final_centroids[idx] = old_centroids[i]\n",
     "        \n",
     "            \n",
@@ -146,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +218,7 @@
      "output_type": "stream",
      "text": [
       "1.47397372742 1.42\n",
-      "0.578029298724\n"
+      "1.730016112\n"
      ]
     }
    ],
@@ -232,7 +236,7 @@
     "print(sum_m,sum_d)\n",
     "avg_d = sum_d/len(target_scaled)\n",
     "\n",
-    "alpha = avg_d/avg_m\n",
+    "alpha = avg_m/avg_d\n",
     "beta = 0\n",
     "print(alpha)\n",
     "        \n"
@@ -240,38 +244,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new centroids:  [[ 0.05837242]\n",
-      " [ 0.52155517]\n",
-      " [ 0.27207241]]\n",
-      "[[ 0.04]\n",
-      " [ 1.  ]\n",
-      " [ 0.3 ]]\n",
-      "old error:  0.0056\n",
-      "members:  [[array([ 0.]), array([ 0.1]), array([ 0.02])], [array([ 1.])], [array([ 0.3])]]\n",
-      "0.0583724168663 closest:  0.04\n",
-      "0.521555171838 closest:  0.3\n",
-      "0.272072411296 closest:  0.3\n",
-      "[array([ 0.05837242]), [], array([ 0.27207241])]\n",
-      "[ 0.05837242]\n",
-      "[ 0.04]\n",
+      "new centroids:  [[ 0.17470606]\n",
+      " [ 0.81430069]\n",
+      " [ 1.56099155]]\n",
+      "[[ 0.105]\n",
+      " [ 1.   ]\n",
+      " [ 1.   ]]\n",
+      "old error:  0.0563\n",
+      "members:  [[array([ 0.]), array([ 0.1]), array([ 0.3]), array([ 0.02])], [array([ 1.])], []]\n",
+      "0.174706060571 closest:  0.105 position:  0\n",
+      "0.814300687199 closest:  1.0 position:  1\n",
+      "1.56099154933 closest:  1.0 position:  1\n",
+      "[array([ 0.17470606]), array([ 1.56099155]), []]\n",
+      "[ 0.17470606]\n",
+      "[ 0.105]\n",
       "ghghh\n",
       "0.0\n",
       "ghghh\n",
       "0.1\n",
       "ghghh\n",
+      "0.3\n",
+      "ghghh\n",
       "0.02\n",
+      "******\n",
+      "[ 1.56099155]\n",
+      "[ 1.]\n",
+      "ghghh\n",
+      "1.0\n",
       "******\n",
       "[]\n",
       "[ 1.]\n",
-      "ghghh\n",
-      "1.0\n"
+      "******\n",
+      "0.924415352714 0.839815791616\n",
+      "new alpha beta 0.805600759284 -0.839815791616\n",
+      "new centroids:  [[-0.75846202]\n",
+      " [-0.46062785]\n",
+      " [-0.11292315]]\n",
+      "compare  0.0563 0.184208\n",
+      "finalparameters 0.805600759284 -0.839815791616\n"
      ]
     },
     {
@@ -280,18 +297,6 @@
      "text": [
       "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
       "  return_n_iter=True)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-76-9959afa771a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mreframed_centroids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclosest_centroids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreframed_centroids\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcentroids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mnew_alphabeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcal_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclusters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreframed_centroids\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_alphabeta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-72-e8a5b05f0e0d>\u001b[0m in \u001b[0;36mcal_gradient\u001b[0;34m(clusters, reframed_centroids, old_alpha, old_beta)\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ghghh\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmember\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[0mgradient\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m(\u001b[0m\u001b[0mreframed_centroids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m             \u001b[0mgradient_alpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_alpha\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mreframed_centroids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mgradient_beta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_beta\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
