--- a/Kmeans.ipynb
+++ b/Kmeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -30,27 +30,29 @@
     "data_scaled = scaler.fit_transform(data[:5])\n",
     "ct = [[ 0.17470606],[ 0.81430069],[ 1.56099155]]\n",
     "clusters = kmeans(3,data_scaled,ct,1,1)\n",
-    "print(clusters)"
+    "print(clusters[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def kmeans(k,dataItems,centroids,maxIter,num_attr):\n",
-    "    old_centroids = centroids\n",
-    "    #print(k,dataItems,centroids,maxInter,num_attr)\n",
     "    \n",
+    "    #print(k,dataItems,centroids,maxInter,num_attr)\n",
+    "    old_centroids = []\n",
     "    groups = []\n",
+    "    \n",
     "    for i in range(k):\n",
     "        groups.append([])\n",
     "        \n",
     "    iter = 0\n",
-    "    while(iter < maxIter):\n",
+    "    while(iter < maxIter or old_centroids != centroids):\n",
+    "        old_centroids = centroids\n",
     "        for item in dataItems:\n",
     "            row = []\n",
     "            for centroid in centroids:\n",
@@ -66,9 +68,27 @@
     "            \n",
     "        iter += 1\n",
     "        \n",
-    "    return groups\n",
+    "    ss = 0    \n",
+    "    for i in range(k):\n",
+    "        for item in groups[i]:\n",
+    "            for j in range(num_attr):\n",
+    "            \n",
+    "                diff = abs(item[j]- old_centroids[i][j])\n",
+    "                ss += pow(diff,2)\n",
+    "            \n",
+    "        \n",
+    "    return (groups,ss)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
