--- a/Main.ipynb
+++ b/Main.ipynb
@@ -40,21 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype <U9 was converted to float64 by MinMaxScaler.\n",
+      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype <U9 was converted to float64 by StandardScaler.\n",
       "  warnings.warn(msg, _DataConversionWarning)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn import preprocessing\n",
     "\n",
     "#load base data\n",
     "base_data = load_csv('season1.csv')    \n",
@@ -66,40 +66,41 @@
     "target_data = load_csv('season2.csv')\n",
     "target_data = np.array(target_data[1:])\n",
     "\n",
-    "#normalize data using a min max normalizer\n",
-    "mixed = np.concatenate((base_data,target_data))\n",
-    "scaler = MinMaxScaler()\n",
-    "mixed_scaled = scaler.fit_transform(mixed)\n",
+    "# #normalize data using a min max normalizer\n",
+    "# mixed = np.concatenate((base_data,target_data))\n",
+    "# scaler = MinMaxScaler()\n",
+    "# mixed_scaled = scaler.fit_transform(mixed)\n",
     "\n",
     "#base_data = scaler.fit_transform(base_data)\n",
     "\n",
     "#normalized base and target data\n",
-    "base_scaled = mixed_scaled[:base_size]\n",
-    "target_scaled = mixed_scaled[base_size:]\n"
+    "scaler = preprocessing.StandardScaler().fit(base_data)\n",
+    "base_scaled = scaler.transform(base_data)\n",
+    "target_scaled = scaler.transform(target_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# number of attributes\n",
-    "num_attr = mixed_scaled[0].size"
+    "num_attr = base_scaled[0].size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimum Number of Clusters:  7\n"
+      "Optimum Number of Clusters:  2\n"
      ]
     }
    ],
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -156,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "applying base model in target result:  7.7624213248\n"
+      "applying base model in target result:  571.527019322\n"
      ]
     },
     {
@@ -184,18 +185,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retraining results on  10  data  9.63067393178\n",
-      "Retraining results on  20  data  7.1586705234\n",
-      "Retraining results on  30  data  6.50433189277\n",
-      "Retraining results on  40  data  5.72733851029\n",
-      "Retraining results on  50  data  5.86071341305\n"
+      "Retraining results on  10  data  565.299307407\n",
+      "Retraining results on  20  data  644.150747991\n",
+      "Retraining results on  30  data  540.942946961\n",
+      "Retraining results on  40  data  520.660539856\n",
+      "Retraining results on  50  data  525.602167507\n"
      ]
     },
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -407,12 +408,13 @@
     "    target_cent = cal_centroids(best_alpha,best_beta)\n",
     "    kmeans = KMeans(n_clusters=num_clusters, init=target_cent, max_iter=1)\n",
     "    kmeans.fit(target_scaled)\n",
-    "    print(kmeans.inertia_)"
+    "    #print(\"Reframing results on \",kmeans.inertia_)\n",
+    "    return kmeans.inertia_ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,11 +429,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.85793038656\n",
-      "6.41731956977\n",
-      "6.17363942937\n",
-      "6.24938568202\n",
-      "6.23006761665\n"
+      "Reframing results on  10  data:  448.199515443\n",
+      "Reframing results on  20  data:  445.006698957\n",
+      "Reframing results on  30  data:  444.852265071\n"
      ]
     }
    ],
@@ -466,7 +466,8 @@
     "\n",
     "    #print(alpha,beta)\n",
     "    #print(\"#####\")\n",
-    "    learn_parameters(alpha,beta)\n",
+    "    result = learn_parameters(alpha,beta)\n",
+    "    print(\"Reframing results on \",n,\" data: \",result)\n",
     "\n"
    ]
   },
