create hillclimbing file

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#function to write in csv\n",
@@ -19,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Function to read csv files\n",
@@ -47,8 +43,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype <U9 was converted to float64 by StandardScaler.\n",
-      "  warnings.warn(msg, _DataConversionWarning)\n"
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\utils\\validation.py:475: DataConversionWarning: Data with input dtype <U9 was converted to float64 by StandardScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
      ]
     }
    ],
@@ -82,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# number of attributes\n",
@@ -136,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#learn centers from source/base model\n",
@@ -164,14 +156,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "applying base model in target result:  422.912806318\n"
+      "applying base model in target result:  422.9128063175011\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\cluster\\k_means_.py:896: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
       "  return_n_iter=True)\n"
      ]
     }
@@ -192,18 +184,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retraining results on  10  data  396.243217504\n",
-      "Retraining results on  20  data  445.42475718\n",
-      "Retraining results on  30  data  446.59106654\n",
-      "Retraining results on  40  data  395.354560891\n",
-      "Retraining results on  50  data  393.615917857\n"
+      "Retraining results on  10  data  396.243217503885\n",
+      "Retraining results on  20  data  445.42475717952914\n",
+      "Retraining results on  30  data  446.59106653953415\n",
+      "Retraining results on  40  data  395.35456089127797\n",
+      "Retraining results on  50  data  404.8149059346904\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\cluster\\k_means_.py:896: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
       "  return_n_iter=True)\n"
      ]
     }
@@ -228,9 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def cal_centroids(alpha,beta):\n",
@@ -253,9 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def kmeans_custom(k,dataItems,centroids,maxIter,num_attr):\n",
@@ -301,9 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def cal_gradient(clusters,reframed_centroids,old_alpha,old_beta):\n",
@@ -343,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def learn_parameters(alpha,beta):\n",
@@ -421,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/tonmoy/anaconda3/lib/python3.6/site-packages/sklearn/cluster/k_means_.py:889: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
+      "c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\sklearn\\cluster\\k_means_.py:896: RuntimeWarning: Explicit initial center position passed: performing only one init in k-means instead of n_init=10\n",
       "  return_n_iter=True)\n"
      ]
     },
@@ -429,11 +413,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reframing results on  10  data:  377.439384978\n",
-      "Reframing results on  20  data:  377.439384978\n",
-      "Reframing results on  30  data:  377.439384978\n",
-      "Reframing results on  40  data:  378.317661096\n",
-      "Reframing results on  50  data:  378.317661096\n"
+      "Reframing results on  10  data:  377.43938497809415\n",
+      "Reframing results on  20  data:  377.43938497809415\n",
+      "Reframing results on  30  data:  377.43938497809415\n",
+      "Reframing results on  40  data:  378.31766109617956\n",
+      "Reframing results on  50  data:  378.31766109617956\n"
      ]
     }
    ],
@@ -499,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
